--- a/angular.json
+++ b/angular.json
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "tasks"
+    }
+  },
+  "defaultProject": "tasks",
+  "cli": {
+    "analytics": "e5e8ef1b-36f8-4908-8c62-d6ea1b03104d"
+  }
 }
